# autobot

./: LICENSE  README.md
src/autobot/: CMakeLists.txt  KinectTransformCalibration.vcg  package.xml
src/autobot/launch/: amcl.launch  depth2laser.launch  gmapping.launch  map_builder.launch  move_base.launch  move_base_blank_map.launch  openni_driver.launch  openni_node.launch  pcl2laser.launch  personfollower.launch  simulate_amcl.launch  simulate_youbot.launch  youbot.launch  youbot_amcl.launch
src/autobot/maps/: lab_map.pgm  lab_map_Old.pgm  lab_map_Old.yaml  my_blank_map.yaml
src/autobot/src/: autobot_node.cpp  tf_broadcaster.cpp  tf_listener.cpp
src/youbot_driver_ros_interface/: CMakeLists.txt  package.xml
src/youbot_driver_ros_interface/debian/: postinst
src/youbot_driver_ros_interface/include/youbot_driver_ros_interface/: YouBotOODLWrapper.h
src/youbot_driver_ros_interface/launch/: youbot_driver.launch
src/youbot_driver_ros_interface/src/: YouBotOODLWrapper.cpp
src/youbot_navigation/youbot_navigation_common/config/: base_local_planner_params.yaml  costmap_common_params.yaml
src/youbot_navigation/youbot_navigation_global/config/: global_costmap_params.yaml
src/youbot_ros_tools/youbot_gazebo/worlds/: empty.world
